# deck-checker

./: INSTRUCTIONS.md  PROJECT_CONTEXT.md  README.md  config.json  demo_windows.py  learning.py  library.py  main_window.py  models.py  preprocessing.py  pyproject.toml  recognition.py  requirements.txt  roi.py  screens.py  sync.ps1  test_models.py  test_pipeline.py  test_preprocessing.py  widgets.py
src/deck_checker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/deck_checker/core/: config.py  models.py  state_machine.py
src/deck_checker/hardware/: base.py  camera.py  gpio.py  strobe.py
src/deck_checker/storage/: library.py
src/deck_checker/ui/: admin_screen.py  main.py  main_window.py  screens.py  theme.py
src/deck_checker/vision/: fixed_roi.py  learning.py  preprocessing.py  recognition.py  roi.py
tests/: test_hardware.py  test_phase2.py  test_state_machine.py
