[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deck_checker"
version = "0.1.0"
description = "Casino card deck verification system for Raspberry Pi 5"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Deck Checker Team" }]

dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Runtime extras for the actual device
device = [
    "picamera2>=0.3.18",
    "RPi.GPIO>=0.7.1",
    "gpiozero>=2.0",
    "PyQt6>=6.6",
    "onnxruntime>=1.17",
    "boto3>=1.34",
    "paramiko>=3.4",
    "python-escpos>=3.1",
]
# Dev tools (run on laptop)
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipython>=8.20",
]

[project.scripts]
deck-checker = "deck_checker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
